# wasm-snake2

./: .gitignore  Cargo.toml  package-lock.json  package.json
js/: app.js
src/: lib.rs
static/: index.html
